package com.saferoom.test;

import com.saferoom.client.UDPSender;
import com.saferoom.grpc.*;

import com.saferoom.p2p.*;
import io.grpc.ManagedChannel;
import io.grpc.ManagedChannelBuilder;

public class SafeRoomTestRunner {

    public static void runP2PTest(String myUsername, String targetUsername) {
        System.out.println("ğŸš€ SafeRoom P2P Test BaÅŸlÄ±yor: " + myUsername + " â†’ " + targetUsername);

        // 1ï¸âƒ£ STUN Tespiti
        String[] info = MultiStunClient.StunClient();

        if (!info[0].equals("true")) {
            System.out.println("âŒ STUN baÅŸarÄ±sÄ±z, test durduruldu.");
            return;
        }

        String myIp = info[1];
        int myPort = Integer.parseInt(info[2]);
        boolean myState = Boolean.parseBoolean(info[3]);

        System.out.println("ğŸŒ STUN IP: " + myIp + " PORT: " + myPort + " OpenAccess: " + myState);

        // 2ï¸âƒ£ GRPC Kanal OluÅŸtur
        ManagedChannel channel = ManagedChannelBuilder.forAddress("localhost", 50051)
                .usePlaintext()
                .build();

        UDPHoleGrpc.UDPHoleBlockingStub client = UDPHoleGrpc.newBlockingStub(channel);

        // 3ï¸âƒ£ RAM'e KayÄ±t (registerClient)
        SafeRoomProto.Stun_Info myInfo = SafeRoomProto.Stun_Info.newBuilder()
                .setUsername(myUsername)
                .setIp(myIp)
                .setPort(myPort)
                .setState(myState)
                .build();

        SafeRoomProto.Status reg = client.registerClient(myInfo);
        System.out.println("ğŸ“¥ Register: " + reg.getMessage());

        // 4ï¸âƒ£ Hedef Peer Bilgisini Al
        SafeRoomProto.Request_Client req = SafeRoomProto.Request_Client.newBuilder()
                .setUsername(targetUsername)
                .build();

        SafeRoomProto.Stun_Info targetInfo = client.getStunInfo(req);
        if (targetInfo.getIp().isEmpty()) {
            System.out.println("âŒ Hedef peer RAM'de yok, test durduruldu.");
            return;
        }

        System.out.println("ğŸ¯ Hedef Bilgisi: " + targetInfo.getIp() + ":" + targetInfo.getPort());

        // 5ï¸âƒ£ UDP Delik AÃ§ma MesajÄ± GÃ¶nder
        String fullMessage = "HOLE_PUNCH:" + myUsername;
        UDPSender.sendPunch(myUsername, targetUsername, myIp, targetInfo.getIp(), myPort, targetInfo.getPort(), fullMessage);

        // 6ï¸âƒ£ Handshake
        SafeRoomProto.HandshakeConfirm handshake = SafeRoomProto.HandshakeConfirm.newBuilder()
                .setClientId(myUsername)
                .setTargetId(targetUsername)
                .setTimestamp(System.currentTimeMillis())
                .build();

        SafeRoomProto.Status hs = client.handShake(handshake);
        System.out.println("ğŸ¤ Handshake sonucu: " + hs.getMessage());

        // 7ï¸âƒ£ KanalÄ± kapat
        channel.shutdown();

        System.out.println("âœ… P2P Test BaÅŸarÄ±yla TamamlandÄ±.");
    }
}
